--- a/src/components/card-header/cardHeader.css
+++ b/src/components/card-header/cardHeader.css
@@ -18,3 +18,8 @@ span{
     justify-content: center;
     color: grey;
 }
+@media only screen and (max-width: 700px){
+  .header{
+    width: 15rem;
+  }
+}
