--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -1,5 +1,18 @@
 .dashboard{
-    width: 84%;
+    margin-top: 3rem;
+    margin-left: 3rem;
+    width: 75%;
     position: relative;
      left:16%;
+     border: 2px solid grey;
+     padding: 1rem;
+     
 }
+@media only screen and (max-width: 700px){
+  .dashboard{
+    width: 70%;
+    margin-left: 0.5rem;
+    padding: 0;
+    border: none;
+  }
+  }
