--- a/src/components/release-projects/release.css
+++ b/src/components/release-projects/release.css
@@ -14,3 +14,9 @@
     display: flex;
     justify-content: space-evenly;
   }
+  @media only screen and (max-width: 700px){
+  .cards{
+    display: flex;
+    flex-direction: column;
+  }
+  }
