--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -12,10 +12,11 @@ img {
   height: 100vh;
   width: 16%;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  border-radius: 1rem;
+  
 }
 .logo {
   padding: 1rem;
+  display: flex;
 }
 .menu-item {
   display: flex;
@@ -29,6 +30,11 @@ h6 {
   color: black;
   text-decoration: none;
 }
+.hamburger{
+  margin-left: 1rem;
+}
+
+
 @media only screen and (max-width: 1024px) {
   img {
     height: 1.2rem;
@@ -40,26 +46,19 @@ h6 {
     font-size: large;
   }
 }
-@media only screen and (max-width: 900px) {
-  img {
-    height: 1rem;
-    text-align: center;
-    margin-right: 5px;
-  }
+@media only screen and (max-width: 700px){
   .sidebar h6{
-    margin-left: 0.6rem;
-    font-size: medium;
+    visibility: hidden;
   }
-}
-
-@media only screen and (max-width: 600px) {
-  img {
-    height: 0.8rem;
-    text-align: center;
-    margin-right: 5px;
+  .logo img{
+height:1rem ;
+width: 1rem;
   }
-  .sidebar h6{
-    margin-left: 0.4rem;
-    font-size: small;
+  .logo{
+    padding: 0.4rem;
+  }
+  .sidebar{
+    width: 13%;
+    height: 100%;
   }
 }
