--- a/src/components/users/users.css
+++ b/src/components/users/users.css
@@ -10,9 +10,23 @@
 .status {
   height: 10px;
   width: 10px;
-
   border-radius: 50%;
   background-color: aqua;
   position: relative;
   right: -20px;
+}
+.bar {
+  height: 3px;
+  background: #00dc00;
+  border-radius: 5px;
+}
+
+@media only screen and (max-width: 700px){
+  .users{
+    left: 12%;
+  }
+.status{
+  position: relative;
+  left: 13px;
+}
 }
